get brokers
